send email when a new message is added